[package]
name = "system_wide_key_state"
version = "1.0.1"
authors = ["Aleksandr \"Flone\" Tretyakov (github.com/Flone-dnb)"]
edition = "2018"
description = "Query system-wide key state."
license = "MIT"
repository = "https://github.com/Flone-dnb/system-wide-key-state"
documentation = "https://docs.rs/system_wide_key_state"

[dependencies]
winapi = {version = "0.3.9", features =["winuser"]}
x11 = {version = "2.18.2", features = ["xlib"]}
num-traits = "0.2"
num-derive = "0.3"
